--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,5 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
+        //nam code
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
