--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -17,5 +17,10 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
         //nam code
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
