--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#191714</color>
+    <color name="colorPrimaryDark">#191414</color>
+    <color name="colorAccent">#57B560</color>
+    <color name="colorAccentPressed">#1DB954</color>
+    <color name="colorLoginPressed">#e1e0e0</color>
+
+    <color name="colorGrayLight">#444444</color>
+    <color name="colorGrayDark">#121212</color>
+
+    <color name="colorTopHeaderBar">#191919</color>
+    <color name="colorBottomNavBar">#282828</color>
+    <color name="colorNavIcon">#ABABAB</color>
+
+    <color name="colorWhite">#ffffff</color>
 </resources>
